Committing PaymentAPI
