# src/main/java/com/dtos/PaymentRequestDto.java
@@ -1,0 +1,22 @@
+package com.dtos;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import org.springframework.stereotype.Component;
+
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+@Builder
+public class PaymentRequestDto {
+
+    private String cardNumber;
+
+    private String cvv;
+
+    private Long amount;
+
+    private String description;
+}
