# src/main/java/com/dtos/PaymentResponseDto.java
@@ -1,0 +1,21 @@
+package com.dtos;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import org.springframework.stereotype.Component;
+
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+@Builder
+public class PaymentResponseDto {
+
+    private boolean success;
+
+    private String message;
+
+    private Long transactionId;
+}
+
