# src/main/java/com/entities/Payment.java
@@ -2,21 +2,29 @@ package com.entities;
 
 
 import java.time.LocalDate;
+import java.util.List;
 
-import jakarta.persistence.Entity;
-import jakarta.persistence.GeneratedValue;
-import jakarta.persistence.GenerationType;
-import jakarta.persistence.Id;
+import jakarta.persistence.*;
 
+import lombok.AllArgsConstructor;
+import lombok.Builder;
 import lombok.Data;
+import lombok.NoArgsConstructor;
 
 @Entity
 @Data
+@NoArgsConstructor
+@AllArgsConstructor
+@Builder
 public class Payment {
 
     @Id @GeneratedValue(strategy = GenerationType.IDENTITY)
-    private Long Id;
-    private String titre;
-    private String transaction;
+    private Long id;
+    private String currency;
+    private String status;
+    private Long amount;
 
+    //@OneToMany
+    //private List<Reservation> reservations;
+    private String createdAt;
 }
